Rollback to BASE64Encoder, updated dependencies and scripts