@@ -1,7 +1,8 @@
 package monitor.utils;
 
+import sun.misc.BASE64Encoder;
+
 import java.util.Arrays;
-import java.util.Base64;
 import java.util.Optional;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
@@ -21,7 +22,7 @@ public class Utils {
 	}
 
 	public static String toBase64(String content) {
-		return new String(Base64.getEncoder().encode(content.getBytes()));
+		return new BASE64Encoder().encode(content.getBytes());
 	}
 
 }
